# Detector-de-bloqueos

./: .gitignore  README.md  main.py  pyproject.toml  render.yml
notebooks/: data_preprocessing.ipynb  train_model_otros.ipynb  training_model.ipynb  vision_artificial_project.ipynb
scripts/Obtencion-imagenes/: descarga _otros.py  descargar_imagenes.py
static/: script.js  style.css
templates/: index.html
