[project]
name = "deteccion-bloqueos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "icrawler>=0.6.10",
    "lxml>=6.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "selenium>=4.45.0",
    "torch>=2.5.0,<2.8.0",
    "torchvision>=0.20.0,<0.23.0",
    "ultralytics>=8.4.87",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true